<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000FF"
    tools:context=".officialActivity">

    <TextView
        android:id="@+id/fillLocationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/realPurpleDark"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/currentLocation" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillLocationView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="311dp" />

            <TextView
                android:id="@+id/officePositionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/officialPosition" />

            <TextView
                android:id="@+id/officialNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/officePositionView"
                tools:text="@string/officialName" />

            <TextView
                android:id="@+id/partyNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/officialNameView"
                tools:text="@string/officialparty" />

            <ImageView
                android:id="@+id/officialImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:adjustViewBounds="true"
                android:onClick="photoClicked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partyNameView"
                app:srcCompat="@drawable/missing"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/partyButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:onClick="partyClicked"
                app:layout_constraintBottom_toBottomOf="@+id/officialImage"
                app:layout_constraintEnd_toEndOf="@+id/officialImage"
                app:layout_constraintStart_toStartOf="@+id/officialImage"
                app:srcCompat="@drawable/dem_logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/addressView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/officialAddress"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/officialImage" />

            <TextView
                android:id="@+id/filladdressView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/addressView"
                tools:text="aaaaaaaaaaaaaaaaaaaaaaa" />

            <TextView
                android:id="@+id/phoneView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/officialPhone"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filladdressView" />

            <TextView
                android:id="@+id/fillPhoneView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/phoneView"
                tools:text="111111111" />

            <TextView
                android:id="@+id/websiteView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/officialWebsite"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fillPhoneView" />

            <TextView
                android:id="@+id/fillWebsiteView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/websiteView"
                tools:text="https://www.adh.com" />

            <TextView
                android:id="@+id/emailView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/officialEmail"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fillWebsiteView" />

            <TextView
                android:id="@+id/fillEmailView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="akshay kishore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/emailView" />

            <ImageView
                android:id="@+id/twitterbutton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:onClick="twitterClicked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fillEmailView"
                app:srcCompat="@drawable/twitter"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/facebookbutton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:onClick="facebookClicked"
                app:layout_constraintEnd_toStartOf="@+id/twitterbutton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/twitterbutton"
                app:srcCompat="@drawable/facebook"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/youtubeButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:onClick="youtubeClicked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/twitterbutton"
                app:layout_constraintTop_toTopOf="@+id/twitterbutton"
                app:srcCompat="@drawable/youtube"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>